# Regime-aware-Cross-sectional-stock-scoring-model

./: .gitignore  README.md  RESEARCH_CYCLE_LOG.md  TODO.md  environment.yml  pyproject.toml  requirements.txt
config/: README.md  config.yaml  config_split_frozen.yaml  config_split_no_turnover.yaml  config_split_walk_forward.yaml  config_split_walk_forward_spo.yaml  config_split_walk_forward_weekly_diagmv_raw.yaml  config_split_walk_forward_weekly_topq_130_30.yaml  factor_family_map.yaml
quant_pipeline/: __init__.py
quant_pipeline/pipeline/: alpha101_factors.py  artifacts.py  backtester.py  data_loader.py  downloaders.py  experiments.py  factor_batches.py  factor_processing.py  factor_processor.py  masks.py  regime_hmm.py  regime_model.py  reporting.py  score_calibration.py  scoring_model.py  spo.py  targets.py  utils.py
quant_pipeline/scripts/: __init__.py  compute_factor_ic.py  compute_factors_batch.py  download_fred_yields.py  download_prices.py  download_sector_map.py  download_vix.py  main.py  plot_performance.py  run_alpha_decay_analysis.py  run_backtest.py  run_backtest_split.py  run_data_download.py  run_factor_calculate.py  run_hmm_regime.py  run_incremental_update.py  run_regime_calculate.py  run_regime_parameter_sweep.py  run_singlefile_data_download.py  run_small_portfolio_research.py
